Fix sidebar from overlapping checkboxes on small screens
Pushes the sidebar down so the graphic and such does not overlap
the checkboxes for 'Show Stress', 'Food Division', and 'Caesura'.

--- a/css/screen.styl
+++ b/css/screen.styl
@@ -217,6 +217,9 @@ button
 
 
 // Sidebar styles
+@media screen and (max-width: 767px)
+  #sidebar
+      margin-top: 80px
 
 #sidebar
     h2
